--- a/examples.ipynb
+++ b/examples.ipynb
@@ -61,31 +61,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "b75f99aa",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'MT-bench-QA-rating': 1, 'MT-bench-QA-raw_response': 'Beer'}\n",
+      "{'MT-bench-QA-rating': 10, 'MT-bench-QA-raw_response': 'Unanswerable question.'}\n",
+      "{'MT-bench-QA-rating': 1, 'MT-bench-QA-raw_response': 'Unanswerable question.'}\n"
+     ]
+    }
+   ],
    "source": [
-    "judge = QAJudge(model_name=\"gpt-4.1-mini\", openai_client=openai_client)\n",
+    "from src.judges import LLMJudge\n",
+    "\n",
+    "judge = LLMJudge(judge_name=\"MT-bench-QA\", model_name=\"gpt-4.1-nano\", openai_client=openai_client)\n",
     "print(judge._call_judge(\n",
-    "    judge_name=\"MT-bench-QA\",\n",
     "    input=\"What motivated Zhao Wei to found WeTech?\",\n",
     "    output=\"Beer\",\n",
     "    expected=\"Zhao was motivated by his belief in doing well by doing good.\"\n",
     "))\n",
     "print(judge._call_judge(\n",
-    "    judge_name=\"MT-bench-QA\",\n",
     "    input=\"What motivated Zhao Wei to found WeTech?\",\n",
     "    output=\"UNANSWERABLE\",\n",
     "    expected=\"The answer is not found in the document.\"\n",
     "))\n",
     "print(judge._call_judge(\n",
-    "    judge_name=\"MT-bench-QA\",\n",
     "    input=\"What motivated Zhao Wei to found WeTech?\",\n",
     "    output=\"Wrong answer\",\n",
     "    expected=\"The answer is not found in the document.\"\n",
     "))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "638af451",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
