fix unanswerable data for finetuning pipeline

--- a/experiments.ipynb
+++ b/experiments.ipynb
@@ -9,20 +9,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/azureuser/highlight-summarize/.venv/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
+    "import time\n",
     "import datasets\n",
     "import numpy as np\n",
     "import seaborn as sns\n",
@@ -117,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +148,7 @@
    "source": [
     "inference_datasets = {}\n",
     "\n",
-    "for dataset_name, DATASET in DATASETS.items():\n",
+    "for dataset_name, dataset in DATASETS.items():\n",
     "    print(f\"Running inference for dataset: {dataset_name}\")\n",
     "    results_dir = RESULTS_DIR.format(dataset_name=dataset_name)\n",
     "    for pipeline in PIPELINES:\n",
@@ -184,12 +176,15 @@
     "                temperature=temperature,\n",
     "                n_trials=N_TRIALS,\n",
     "            )\n",
-    "            prediction_dataset = DATASET.map(\n",
+    "            now = time.time()\n",
+    "            prediction_dataset = dataset.map(\n",
     "                pipeline,\n",
     "                desc=f\"Generating predictions (Model: {model_name}, Pipeline: {rag_pipeline.__name__})\",\n",
     "                num_proc=N_PROC,\n",
     "                load_from_cache_file=False,\n",
     "                )\n",
+    "            elapsed_time = time.time() - now\n",
+    "            print(f\"Elapsed time for predictions: {elapsed_time:.2f} seconds. Average: {elapsed_time / len(dataset):.2f} seconds per example.\")\n",
     "            # Store.\n",
     "            print(f\"Storing predictions for: {model_name} with {rag_pipeline.__name__} pipeline.\")\n",
     "            prediction_dataset.save_to_disk(os.path.join(results_dir, f\"{run_id}.predicted\"))\n",
@@ -410,13 +405,6 @@
     "    plt.legend()\n",
     "    plt.tight_layout()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
