implement judges/judges

--- a/examples.ipynb
+++ b/examples.ipynb
@@ -11,16 +11,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "cc36deda",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from src.utils import openai_client"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "360f34b6",
    "metadata": {},
@@ -35,28 +25,21 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/azureuser/highlight-summarize/.venv/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n",
-      "Device set to use cuda:0\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "{'answer_pred': 'Amira Bintang is an upstart candidate focusing on social activism, urban development, and public transportation reform, while incumbent Rizal Harahap emphasizes his track record and completed infrastructure projects during his term.',\n",
-       " 'summarizer_llm_response': \"guessed_question='What are the main campaign platforms and strategies of the candidates Amira Bintang and Rizal Harahap in the Jakarta election?' answer='Amira Bintang is an upstart candidate focusing on social activism, urban development, and public transportation reform, while incumbent Rizal Harahap emphasizes his track record and completed infrastructure projects during his term.'\",\n",
-       " 'summarizer_llm_guessed_question': 'What are the main campaign platforms and strategies of the candidates Amira Bintang and Rizal Harahap in the Jakarta election?',\n",
-       " 'highlighter_extracted': 'Amira Bintang, an upstart candidate with extensive social activism experience and promising urban development and public transportation reform as key platforms of her candidacy speech in Jakarta; incumbent Rizal Harahap relies heavily on his track record and highlights all infrastructure projects completed during his term.',\n",
-       " 'highlighter_llm_response': 'Amira Bintang',\n",
-       " 'highlighter_text_extracts': None,\n",
-       " 'highlighter_fuzzmatch_scores': None,\n",
-       " 'highlighter_score': 0.979455292224884,\n",
-       " 'model_name': 'gpt-4.1-mini',\n",
+       "{'answer_pred': 'Amira Bintang is an upstart candidate known for her extensive social activism experience. Her candidacy speech in Jakarta highlights urban development and public transportation reform as key platforms.',\n",
+       " 'summarizer_llm_response': \"guessed_question='Who is Amira Bintang and what are the main focuses of her candidacy?' answer='Amira Bintang is an upstart candidate known for her extensive social activism experience. Her candidacy speech in Jakarta highlights urban development and public transportation reform as key platforms.'\",\n",
+       " 'summarizer_llm_guessed_question': 'Who is Amira Bintang and what are the main focuses of her candidacy?',\n",
+       " 'highlighter_extracted': 'Amira Bintang, an upstart candidate with extensive social activism experience and promising urban development and public transportation reform as key platforms of her candidacy speech in Jakarta',\n",
+       " 'highlighter_llm_response': '- Amira Bintang, an upstart candidate with extensive social activism experience and promising urban development and public transportation reform as key platforms of her candidacy speech in Jakarta',\n",
+       " 'highlighter_text_extracts': ['Amira Bintang, an upstart candidate with extensive social activism experience and promising urban development and public transportation reform as key platforms of her candidacy speech in Jakarta'],\n",
+       " 'highlighter_fuzzmatch_scores': [100.0],\n",
+       " 'highlighter_score': None,\n",
+       " 'model_name': None,\n",
        " 'temperature': 0.2,\n",
-       " 'llm_response': None}"
+       " 'llm_response': None,\n",
+       " 'highlighter_model_name': 'gpt-4.1-mini',\n",
+       " 'summarizer_model_name': 'gpt-4.1-mini'}"
       ]
      },
      "execution_count": 2,
@@ -65,11 +48,11 @@
     }
    ],
    "source": [
-    "from src.hs import HSBaseline, HSStructuredHighlighter, HSBERTExtractor\n",
+    "from src.hs import HSBaseline\n",
     "\n",
-    "hs = HSBERTExtractor(\n",
-    "    model_name=\"gpt-4.1-mini\",\n",
-    "    openai_client=openai_client,\n",
+    "hs = HSBaseline(\n",
+    "    highlighter_model_name=\"gpt-4.1-mini\",\n",
+    "    summarizer_model_name=\"gpt-4.1-mini\",\n",
     "    temperature=0.2,\n",
     "    n_trials=1,\n",
     "    sleep_time_between_retrials=1.0,\n",
@@ -88,26 +71,21 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Error in call_highlighter: Error code: 401 - {'error': {'code': 'PermissionDenied', 'message': 'The principal `f6116fec-8b05-465a-accb-52ef3e1c3c7f` lacks the required data action `Microsoft.CognitiveServices/accounts/OpenAI/deployments/chat/completions/action` to perform `POST /openai/deployments/{deployment-id}/chat/completions` operation.'}}\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "{'answer_pred': 'UNANSWERABLE',\n",
-       " 'summarizer_llm_response': None,\n",
-       " 'summarizer_llm_guessed_question': None,\n",
-       " 'highlighter_extracted': None,\n",
-       " 'highlighter_llm_response': \"Error: Error code: 401 - {'error': {'code': 'PermissionDenied', 'message': 'The principal `f6116fec-8b05-465a-accb-52ef3e1c3c7f` lacks the required data action `Microsoft.CognitiveServices/accounts/OpenAI/deployments/chat/completions/action` to perform `POST /openai/deployments/{deployment-id}/chat/completions` operation.'}}\",\n",
-       " 'highlighter_text_extracts': None,\n",
-       " 'highlighter_fuzzmatch_scores': None,\n",
+       "{'answer_pred': 'Amira Bintang is an upstart candidate in Jakarta known for her extensive social activism experience. Her key campaign platforms focus on urban development and public transportation reform.',\n",
+       " 'summarizer_llm_response': \"guessed_question='Who is Amira Bintang and what are her main campaign platforms in Jakarta?' answer='Amira Bintang is an upstart candidate in Jakarta known for her extensive social activism experience. Her key campaign platforms focus on urban development and public transportation reform.'\",\n",
+       " 'summarizer_llm_guessed_question': 'Who is Amira Bintang and what are her main campaign platforms in Jakarta?',\n",
+       " 'highlighter_extracted': 'Amira Bintang, an upstart candidate with extensive social activism experience and promising urban development and public transportation reform as key platforms of her candidacy speech in Jakarta;',\n",
+       " 'highlighter_llm_response': \"The upstart candidate in Jakarta's election known for social activism is Amira Bintang.\",\n",
+       " 'highlighter_text_extracts': ['Amira Bintang, an upstart candidate with extensive social activism experience and promising urban development and public transportation reform as key platforms of her candidacy speech in Jakarta;'],\n",
+       " 'highlighter_fuzzmatch_scores': [100.0],\n",
        " 'highlighter_score': None,\n",
        " 'model_name': None,\n",
-       " 'temperature': None,\n",
-       " 'llm_response': None}"
+       " 'temperature': 0.2,\n",
+       " 'llm_response': None,\n",
+       " 'highlighter_model_name': 'gpt-4.1-mini',\n",
+       " 'summarizer_model_name': 'gpt-4.1-mini'}"
       ]
      },
      "execution_count": 3,
@@ -116,11 +94,11 @@
     }
    ],
    "source": [
-    "from src.hs import HSBaseline, HSStructuredHighlighter\n",
+    "from src.hs import HSStructuredHighlighter\n",
     "\n",
     "hs = HSStructuredHighlighter(\n",
-    "    model_name=\"gpt-4.1-mini\",\n",
-    "    openai_client=openai_client,\n",
+    "     highlighter_model_name=\"gpt-4.1-mini\",\n",
+    "    summarizer_model_name=\"gpt-4.1-mini\",\n",
     "    temperature=0.2,\n",
     "    n_trials=1,\n",
     "    sleep_time_between_retrials=1.0,\n",
@@ -142,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "b75f99aa",
    "metadata": {},
    "outputs": [
@@ -150,38 +128,187 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "rating=1 explanation=\"The assistant's response 'Beer' is completely irrelevant and unhelpful in answering the user's question about Zhao Wei's motivation to found WeTech. It lacks any accuracy, depth, or detail, and does not address the expected answer or provide any meaningful information.\"\n",
-      "rating=5 explanation='UNANSWERABLE'\n",
-      "rating=1 explanation='UNANSWERABLE'\n"
+      "Question: What motivated Zhao Wei to found WeTech?\n",
+      "Answer: Zhao was motivated by his belief in doing well by doing good.\n",
+      "Predicted Answer: Beer\n"
      ]
     }
    ],
    "source": [
     "from src.utils import NOANSWER_PRED\n",
-    "from src.judges import LLMJudge\n",
+    "from src.judges import JUDGES\n",
     "\n",
-    "judge = LLMJudge(judge_name=\"MT-bench-QA\", model_name=\"gpt-4.1-mini\", openai_client=openai_client)\n",
-    "print(judge._call_judge(\n",
-    "    input=\"What motivated Zhao Wei to found WeTech?\",\n",
-    "    output=\"Beer\",\n",
-    "    expected=\"Zhao was motivated by his belief in doing well by doing good.\"\n",
-    "))\n",
-    "print(judge._call_judge(\n",
-    "    input=\"What motivated Zhao Wei to found WeTech?\",\n",
-    "    output=NOANSWER_PRED,\n",
-    "    expected=NOANSWER_PRED\n",
-    "))\n",
-    "print(judge._call_judge(\n",
-    "    input=\"What motivated Zhao Wei to found WeTech?\",\n",
-    "    output=\"A desire to create a better world\", # Wrong answer.\n",
-    "    expected=NOANSWER_PRED\n",
-    "))"
+    "examples = [\n",
+    "    {\n",
+    "        \"question\": \"What motivated Zhao Wei to found WeTech?\",\n",
+    "        \"answer\": \"Zhao was motivated by his belief in doing well by doing good.\",\n",
+    "        \"answer_pred\": \"Beer\",\n",
+    "    },\n",
+    "    {\n",
+    "        \"question\": \"What motivated Zhao Wei to found WeTech?\",\n",
+    "        \"answer\": NOANSWER_PRED,\n",
+    "        \"answer_pred\": NOANSWER_PRED,\n",
+    "    },\n",
+    "    {\n",
+    "        \"question\": \"What motivated Zhao Wei to found WeTech?\",\n",
+    "        \"answer\": NOANSWER_PRED,\n",
+    "        \"answer_pred\": \"A desire to create a better world\",  # Wrong answer.\n",
+    "    },\n",
+    "]\n",
+    "\n",
+    "for example in examples:\n",
+    "    print(f\"Question: {example['question']}\")\n",
+    "    print(f\"Answer: {example['answer']}\")\n",
+    "    print(f\"Predicted Answer: {example['answer_pred']}\")\n",
+    "    for judge_name, judge_cls in JUDGES.items():\n",
+    "        judge = judge_cls()\n",
+    "        res = judge(example)\n",
+    "        print(f\"{judge_name}\")\n",
+    "        print(res)\n",
+    "    print(\"-\" * 40)\n",
+    "    print(\"\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "1ac36a84",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'LLMJudgeStructured-gpt-4.1-mini_correctness': 2,\n",
+       " 'LLMJudgeStructured-gpt-4.1-mini_correctness_explanation': \"The assistant's response does not align with the expected answer. The expected answer is 'Beer,' which suggests a specific motivation related to beer, but the assistant states that Zhao was motivated by a belief in doing well by doing good, which is a general statement about ethical motivation and does not address the specific motivation related to beer.\",\n",
+       " 'LLMJudgeStructured-gpt-4.1-mini_faithfulness': 2,\n",
+       " 'LLMJudgeStructured-gpt-4.1-mini_faithfulness_explanation': \"The assistant's response is not faithful to the expected answer as it provides a different motivation that is not supported by the expected answer. There is no indication that Zhao's motivation was related to 'doing well by doing good' in the context of founding WeTech, according to the expected answer.\",\n",
+       " 'LLMJudgeStructured-gpt-4.1-mini_naturalness': 7,\n",
+       " 'LLMJudgeStructured-gpt-4.1-mini_naturalness_explanation': 'The response is phrased naturally and is grammatically correct. It reads like a typical explanation of motivation, even though it does not match the expected content.'}"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "f1ea70ee",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Completion: ParsedChatCompletion[NoneType](id='chatcmpl-BgtGvMXDod2uRSipTiH5oBGRlF0V6', choices=[ParsedChoice[NoneType](finish_reason='stop', index=0, logprobs=None, message=ParsedChatCompletionMessage[NoneType](content='{\"REASONING\": \"The assistant\\'s response is accurate, directly answering the user\\'s question with the correct capital of France, \\'Paris.\\' It is concise and relevant, fulfilling the user\\'s request without any unnecessary information. However, the response lacks additional context or detail that could enhance the user\\'s understanding, such as mentioning that Paris is the largest city in France or a brief note on its significance. Given the simplicity of the question, the brief answer is sufficient, but a slightly more informative response could improve helpfulness and depth.\", \"SCORE\": \"8\"}', refusal=None, role='assistant', annotations=[], audio=None, function_call=None, tool_calls=None, parsed=None))], created=1749561941, model='gpt-4.1-mini-2025-04-14', object='chat.completion', service_tier=None, system_fingerprint='fp_178c8d546f', usage=CompletionUsage(completion_tokens=112, prompt_tokens=156, total_tokens=268, completion_tokens_details=CompletionTokensDetails(accepted_prediction_tokens=0, audio_tokens=0, reasoning_tokens=0, rejected_prediction_tokens=0), prompt_tokens_details=PromptTokensDetails(audio_tokens=0, cached_tokens=0)))\n",
+      "Completion: ParsedChatCompletion[NoneType](id='chatcmpl-BgtGzANVVhoxXBn8O0sfQier59ruC', choices=[ParsedChoice[NoneType](finish_reason='stop', index=0, logprobs=None, message=ParsedChatCompletionMessage[NoneType](content='{\"REASONING\": \"The passage directly states the capital of France as Paris, which exactly answers the query without any extraneous information.\", \"SCORE\": \"3\"}', refusal=None, role='assistant', annotations=[], audio=None, function_call=None, tool_calls=None, parsed=None))], created=1749561945, model='gpt-4.1-mini-2025-04-14', object='chat.completion', service_tier=None, system_fingerprint='fp_178c8d546f', usage=CompletionUsage(completion_tokens=36, prompt_tokens=153, total_tokens=189, completion_tokens_details=CompletionTokensDetails(accepted_prediction_tokens=0, audio_tokens=0, reasoning_tokens=0, rejected_prediction_tokens=0), prompt_tokens_details=PromptTokensDetails(audio_tokens=0, cached_tokens=0)))\n"
+     ]
+    }
+   ],
+   "source": [
+    "from src.utils import openai_client\n",
+    "\n",
+    "\n",
+    "import judges\n",
+    "# from judges import PollMultihopCorrectness\n",
+    "def patched_get_completion(\n",
+    "    messages: list[dict[str, str]],\n",
+    "    model: str,\n",
+    "    temperature: float,\n",
+    "    max_tokens: int,\n",
+    "    seed: int,\n",
+    "    response_format: dict = None,\n",
+    "    response_model = None,\n",
+    "):\n",
+    "    \"\"\"Monkey-patch the get_completion method to use the openai_client.\"\"\"\n",
+    "    return openai_client().beta.chat.completions.parse(\n",
+    "        model=model,\n",
+    "        messages=messages,\n",
+    "        temperature=temperature,\n",
+    "        max_tokens=max_tokens,\n",
+    "        seed=seed,\n",
+    "        response_format=response_format,\n",
+    "    )\n",
+    "# model_response = self.openai_client().beta.chat.completions.parse(\n",
+    "#             messages=[\n",
+    "#                 #{\"role\": \"system\", \"content\": self.system_prompt},\n",
+    "#                 {\"role\": \"user\", \"content\": user_prompt},\n",
+    "#             ],\n",
+    "#             model=self.model_name,\n",
+    "#             response_format=LLMRatingOutput,\n",
+    "#             temperature=self.temperature,\n",
+    "#         ).choices[0].message.parsed\n",
+    "    \n",
+    "\n",
+    "# judges._client.llm_client = my_get_completion\n",
+    "judges.base.get_completion = patched_get_completion\n",
+    "\n",
+    "# judges._client.get_completion([], \"\", 0, 1, 1)\n",
+    "\n",
+    "# MTBenchChatBotResponseQuality\n",
+    "\n",
+    "judge = judges.MTBenchChatBotResponseQuality(model=\"gpt-4.1-mini\")\n",
+    "a = judge.judge(input=\"What is the capital of France?\", expected=\"Paris\", output=\"Paris\")\n",
+    "\n",
+    "judge = judges.ReliableCIRelevance(model=\"gpt-4.1-mini\")\n",
+    "b = judge.judge(\n",
+    "    input=\"What is the capital of France?\",\n",
+    "    expected=\"Paris\",\n",
+    "    output=\"The capital of France is Paris\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "528889f7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Judgment(score='8', reasoning=\"The assistant's response is accurate, directly answering the user's question with the correct capital of France, 'Paris'. It is concise and relevant, fulfilling the user's request without any unnecessary information. However, the response lacks additional context or detail that could enhance the user's understanding, such as mentioning that Paris is the largest city in France or a brief note on its significance. Given the simplicity of the question, the brief answer is sufficient, but a slightly more informative response could improve helpfulness and depth.\")"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "953ce976",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Judgment(score='3', reasoning='The passage directly states the capital of France as Paris, which exactly answers the query.')"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f1ea70ee",
+   "id": "1aba9041",
    "metadata": {},
    "outputs": [],
    "source": []
