--- a/reproduce/data-analysis.ipynb
+++ b/reproduce/data-analysis.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -30,7 +30,7 @@
     "import matplotlib.pyplot as plt\n",
     "from fastchat.serve.monitor.elo_analysis import compute_elo, compute_elo_mle_with_tie\n",
     "\n",
-    "from src.utils import NOANSWER_PRED\n",
+    "from highlight_summarize.utils import NOANSWER_PRED\n",
     "from run_experiments import load_all_results, PIPELINE_MAP"
    ]
   },
