--- a/reproduce/examples.ipynb
+++ b/reproduce/examples.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "ef40ab90",
    "metadata": {},
    "outputs": [
@@ -48,7 +48,7 @@
     }
    ],
    "source": [
-    "from src.hs import HSBaseline\n",
+    "from highlight_summarize.hs import HSBaseline\n",
     "\n",
     "hs = HSBaseline(\n",
     "    highlighter_model_name=\"gpt-4.1-mini\",\n",
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "f4fd23bc",
    "metadata": {},
    "outputs": [
@@ -94,7 +94,7 @@
     }
    ],
    "source": [
-    "from src.hs import HSStructuredHighlighter\n",
+    "from highlight_summarize.hs import HSStructuredHighlighter\n",
     "\n",
     "hs = HSStructuredHighlighter(\n",
     "     highlighter_model_name=\"gpt-4.1-mini\",\n",
@@ -135,8 +135,8 @@
     }
    ],
    "source": [
-    "from src.utils import NOANSWER_PRED\n",
-    "from src.judges import JUDGES\n",
+    "from highlight_summarize.utils import NOANSWER_PRED\n",
+    "from highlight_summarize.judges import JUDGES\n",
     "\n",
     "examples = [\n",
     "    {\n",
@@ -171,33 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "1ac36a84",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'LLMJudgeStructured-gpt-4.1-mini_correctness': 2,\n",
-       " 'LLMJudgeStructured-gpt-4.1-mini_correctness_explanation': \"The assistant's response does not align with the expected answer. The expected answer is 'Beer,' which suggests a specific motivation related to beer, but the assistant states that Zhao was motivated by a belief in doing well by doing good, which is a general statement about ethical motivation and does not address the specific motivation related to beer.\",\n",
-       " 'LLMJudgeStructured-gpt-4.1-mini_faithfulness': 2,\n",
-       " 'LLMJudgeStructured-gpt-4.1-mini_faithfulness_explanation': \"The assistant's response is not faithful to the expected answer as it provides a different motivation that is not supported by the expected answer. There is no indication that Zhao's motivation was related to 'doing well by doing good' in the context of founding WeTech, according to the expected answer.\",\n",
-       " 'LLMJudgeStructured-gpt-4.1-mini_naturalness': 7,\n",
-       " 'LLMJudgeStructured-gpt-4.1-mini_naturalness_explanation': 'The response is phrased naturally and is grammatically correct. It reads like a typical explanation of motivation, even though it does not match the expected content.'}"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "res"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "f1ea70ee",
    "metadata": {},
    "outputs": [
@@ -211,11 +185,10 @@
     }
    ],
    "source": [
-    "from src.utils import openai_client\n",
+    "from highlight_summarize.utils import openai_client\n",
     "\n",
     "\n",
     "import judges\n",
-    "# from judges import PollMultihopCorrectness\n",
     "def patched_get_completion(\n",
     "    messages: list[dict[str, str]],\n",
     "    model: str,\n",
