--- a/reproduce/experiments.ipynb
+++ b/reproduce/experiments.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,11 +20,11 @@
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "from src.qa import QAEvaluator\n",
-    "from src.hs import HSBaseline, HSStructuredHighlighter, HSBERTExtractor\n",
-    "from src.judges import LLMJudgeStructured\n",
-    "from src.utils import openai_client, NOANSWER_PRED\n",
-    "from src.data import load_repliqa, load_bioasq"
+    "from highlight_summarize.qa import QAEvaluator\n",
+    "from highlight_summarize.hs import HSBaseline, HSStructuredHighlighter, HSBERTExtractor\n",
+    "from highlight_summarize.judges import LLMJudgeStructured\n",
+    "from highlight_summarize.utils import openai_client, NOANSWER_PRED\n",
+    "from highlight_summarize.data import load_repliqa, load_bioasq"
    ]
   },
   {
