--- a/reproduce/security-analysis.ipynb
+++ b/reproduce/security-analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "id": "d97b0cf7",
    "metadata": {},
    "outputs": [],
@@ -14,9 +14,9 @@
     "from pydantic import BaseModel\n",
     "from datasets import load_dataset, concatenate_datasets\n",
     "\n",
-    "from src import qa\n",
-    "from src import hs\n",
-    "from src.utils import openai_client"
+    "from highlight_summarize import qa\n",
+    "from highlight_summarize import hs\n",
+    "from highlight_summarize.utils import openai_client"
    ]
   },
   {
